[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/UI/DialogBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/NarrativeScenes/SceneSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Player/farmer-transition-1.png" type="Texture" id=3]
[ext_resource path="res://Scenes/UI/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Narratives/Introduction.gd" type="Script" id=5]
[ext_resource path="res://Assets/Player/farmer-transition-0.png" type="Texture" id=6]
[ext_resource path="res://Scenes/UI/Keyboard.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/UI/MenuArrow.png" type="Texture" id=8]
[ext_resource path="res://Scripts/CharacterSelectButton.gd" type="Script" id=9]
[ext_resource path="res://Assets/Player/ProfileAssets/Rival-0.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player/farmer-transition-1-white.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player/farmer-transition-0-white.png" type="Texture" id=12]


[sub_resource type="Animation" id=1]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 0.298039 ), Color( 1, 1, 1, 0.4 ), Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.698039 ), Color( 1, 1, 1, 0.8 ), Color( 1, 1, 1, 0.901961 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Disappear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.901961 ), Color( 1, 1, 1, 0.8 ), Color( 1, 1, 1, 0.698039 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 0.4 ), Color( 1, 1, 1, 0.298039 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 0.298039 ), Color( 1, 1, 1, 0.4 ), Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.698039 ), Color( 1, 1, 1, 0.8 ), Color( 1, 1, 1, 0.901961 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Disappear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.901961 ), Color( 1, 1, 1, 0.8 ), Color( 1, 1, 1, 0.698039 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 0.4 ), Color( 1, 1, 1, 0.298039 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 0.298039 ), Color( 1, 1, 1, 0.4 ), Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.698039 ), Color( 1, 1, 1, 0.8 ), Color( 1, 1, 1, 0.901961 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Disappear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.901961 ), Color( 1, 1, 1, 0.8 ), Color( 1, 1, 1, 0.698039 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 0.4 ), Color( 1, 1, 1, 0.298039 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "SceneTransition0"
length = 3.4
step = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath("FadeInLow")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fade_in"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharacterSelectButton/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CharacterSelectButton/SpriteWhite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6, 1.6, 2.4, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CharacterSelectButton/SpriteWhite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4, 0.8, 1.2, 1.6, 2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CharacterSelectButton/Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("DialogBox")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disappear"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "SceneTransition1"
length = 3.4
step = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath("FadeInLow")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fade_in"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("DialogBox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disappear"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CharacterSelectButton1/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CharacterSelectButton1/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CharacterSelectButton1/SpriteWhite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.6, 1.6, 2.4, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CharacterSelectButton1/SpriteWhite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4, 0.8, 1.2, 1.6, 2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="IntroductionScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.815686, 1, 0.74902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeInLow" parent="." instance=ExtResource( 4 )]

[node name="BaxterGoodboy" parent="." instance=ExtResource( 2 )]

[node name="DialogBox" parent="." instance=ExtResource( 1 )]

[node name="CharacterSelectButton" type="TextureButton" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.0
margin_top = -49.5
margin_right = -0.999931
margin_bottom = 7.50001
rect_min_size = Vector2( 30, 57 )
disabled = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CharacterSelectButton"]
position = Vector2( 15, 29 )
texture = ExtResource( 6 )
hframes = 4

[node name="SpriteWhite" type="Sprite" parent="CharacterSelectButton"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 15, 29 )
texture = ExtResource( 12 )
hframes = 6

[node name="Icon" type="TextureRect" parent="CharacterSelectButton"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -5.00001
margin_top = 7.0
margin_right = 0.999991
margin_bottom = 16.0
rect_rotation = -90.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterSelectButton"]
anims/Appear = SubResource( 1 )
anims/Disappear = SubResource( 2 )

[node name="Tween" type="Tween" parent="CharacterSelectButton"]

[node name="CharacterSelectButton1" type="TextureButton" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1.0
margin_top = -49.5
margin_right = 31.0
margin_bottom = 7.5
rect_min_size = Vector2( 30, 57 )
disabled = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
character_id = 1

[node name="Sprite" type="Sprite" parent="CharacterSelectButton1"]
position = Vector2( 15, 29 )
texture = ExtResource( 3 )
hframes = 4

[node name="SpriteWhite" type="Sprite" parent="CharacterSelectButton1"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 15, 29 )
texture = ExtResource( 11 )
hframes = 6

[node name="Icon" type="TextureRect" parent="CharacterSelectButton1"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -3.0
margin_top = 7.0
margin_right = 3.0
margin_bottom = 16.0
rect_rotation = -90.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterSelectButton1"]
anims/Appear = SubResource( 3 )
anims/Disappear = SubResource( 4 )

[node name="Tween" type="Tween" parent="CharacterSelectButton1"]

[node name="Rival" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.0
margin_top = -49.5
margin_right = 15.0
margin_bottom = 7.5
rect_min_size = Vector2( 30, 57 )
focus_mode = 0
disabled = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
character_id = 1

[node name="Sprite" type="Sprite" parent="Rival"]
position = Vector2( 15, 29 )
texture = ExtResource( 10 )

[node name="Icon" type="TextureRect" parent="Rival"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -3.0
margin_top = 7.0
margin_right = 3.0
margin_bottom = 16.0
rect_rotation = -90.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Rival"]
anims/Appear = SubResource( 5 )
anims/Disappear = SubResource( 6 )

[node name="Tween" type="Tween" parent="Rival"]

[node name="Keyboard" parent="." instance=ExtResource( 7 )]
visible = false
margin_top = -74.0
margin_bottom = 26.0

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SceneTransition0 = SubResource( 7 )
anims/SceneTransition1 = SubResource( 8 )
[connection signal="final_dialog_completed" from="DialogBox" to="." method="_on_DialogBox_final_dialog_completed"]
[connection signal="focus_entered" from="CharacterSelectButton" to="CharacterSelectButton" method="show_icon"]
[connection signal="focus_exited" from="CharacterSelectButton" to="CharacterSelectButton" method="hide_icon"]
[connection signal="pressed" from="CharacterSelectButton" to="." method="_on_CharacterSelectButton_pressed"]
[connection signal="pressed" from="CharacterSelectButton" to="CharacterSelectButton" method="_self_pressed"]
[connection signal="focus_entered" from="CharacterSelectButton1" to="CharacterSelectButton1" method="show_icon"]
[connection signal="focus_exited" from="CharacterSelectButton1" to="CharacterSelectButton1" method="hide_icon"]
[connection signal="pressed" from="CharacterSelectButton1" to="." method="_on_CharacterSelectButton1_pressed"]
[connection signal="pressed" from="CharacterSelectButton1" to="CharacterSelectButton1" method="_self_pressed"]
[connection signal="focus_entered" from="Rival" to="Rival" method="show_icon"]
[connection signal="focus_exited" from="Rival" to="Rival" method="hide_icon"]
